Week 6/Manifests/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: wayshub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: askari0102/wayshub-backend:production
          ports:
            - containerPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  name: be-wayshub
  namespace: wayshub
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
