Week 6/Manifests/mysql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: wayshub
spec:
  selector:
    matchLabels:
      app: mysql
  serviceName: mysql-service
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: pvc-db
              mountPath: /var/lib/mysql
      volumes:
        - name: pvc-db
          persistentVolumeClaim:
            claimName: pvc-db

---

apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: wayshub
spec:
  selector:
    app: mysql
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
