Week 6/Manifests/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: wayshub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: askari0102/wayshub-frontend:production
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: fe-wayshub
  namespace: wayshub
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: wayshub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: askari0102/wayshub-backend:production
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  name: be-wayshub
  namespace: wayshub
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wayshub-ingress
  namespace: wayshub
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: asykari.kubernetes.studentdumbways.my.id
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: fe-wayshub
                port:
                  number: 80
    - host: api.asykari.kubernetes.studentdumbways.my.id
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: be-wayshub
                port:
                  number: 5000
