Week 6/Manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wayshub-ingress
  namespace: wayshub
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - asykari.kubernetes.studentdumbways.my.id
        - api.asykari.kubernetes.studentdumbways.my.id
      secretName: wildcard-tls
  rules:
    - host: asykari.kubernetes.studentdumbways.my.id
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: fe-wayshub
                port:
                  number: 80
    - host: api.asykari.kubernetes.studentdumbways.my.id
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: be-wayshub
                port:
                  number: 5000
